<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeteoDAM</string>
    <string name="dialog_alarm_name">Intervalo Actualizacion</string>
    <string name="lbl_min">Minutos</string>
    <string name="tab_data">Datos</string>
    <string name="tab_map">Mapa</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_location">Ubicacion</string>
    <string name="lbl_day">Dia</string>
    <string name="sp_1day">1 dia</string>
    <string name="sp_2day">2 dias</string>
    <string name="sp_3day">3 dias</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_details">Ver Detalles</string>
    <string name="title_activity_details_actvity">DetailsActvity</string>
    <string name="lbl_day_avg">Media</string>
    <string name="lbl_day_max">Max.</string>
    <string name="lbl_day_min">Min</string>
    <string name="lbl_humid">Humedad</string>
    <string name="lbl_press">Presion</string>
    <string name="lbl_wind">Viento</string>
    <string name="okBtn">Iniciar</string>
    <string name="clsBtn">Cerrar</string>
    <string name="cancelBtn">Parar</string>
    <string name="progressSyncDlg_title">Cargando Datos</string>
    <string name="progressGPSDlg_title">Cargando Localizacion</string>
    <string name="updTxt">Actualizado </string>

</resources>